03-Nov-2015 Laurent Duflot
	* FilterUpdateMerge.py: add merging of the debugrec_hlt stream
	* data15_13TeV_p2425_debug.ds, data15_13TeV_p2425.ds: update datasets
	* mc15_13TeV_MCSampleList.py: add Madgraph Zee Np0+1+2

02-Nov-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: add Sherpa lvvv and vvvv

31-Oct-2015 Laurent Duflot
	* FilterUpdateMerge.py: fix bug in processing pickle files which caused
	duplicate events in the output. Do not merge NT blocks other than the
	main one by default. Select process to merge by command line.

30-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2425.ds: update list
	* data/data15_13TeV_p2425_debug.ds: debug stream datasets

28-Oct-2015 Geraldine Conti
	* Added FillPhotonProxies function, similarly to what is done for
	electrons, muons and jets

27-Oct-2015 Geraldine Conti
	* Fixed el pT to 10GeV for overlap removal

26-Oct-2015 Geraldine Conti
	* BuildSUSYObjects.cxx : changed photons to "Loose"
	* PhysObjProxyFillerTruth.cxx : added condition for iso electrons and muons

26-Oct-2015 Laurent Duflot
	* update to SUSYTools-00-06-27-03 / SUSY,2.3.32a
	* tag as ZeroLeptonRun2-00-00-54

24-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list from 1.7fb-1 GRL

23-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list from 1.7fb-1 GRL

21-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list from 1.4fb-1 GRL

21-Oct-2015 Larry Lee
	* FilterUpdateMerge.py: write only one cycle of output tree

16-Oct-2015 Laurent Duflot
	* FilterUpdateMerge.py: add protection against multiple tree cycles

13-Oct-2015 Laurent Duflot
	* python/mc15_13TeV_MCSampleList.py: add ttbar alt samples and madgraph W/Z

12-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2419.ds: update lists

10-Oct-2015 Laurent Duflot
	* python/mc15_13TeV_MCSampleList.py: remove 410015,410016 due to
	overlap
	* data/mc15_13TeV_25ns_SM_p2419.ds, data/data15_13TeV_p2425.ds: update
	lists

09-Oct-2015 Laurent Duflot