@@ -1,3 +1,6 @@
+04-Nov-2015 Laurent Duflot
+	* mc15_13TeV_MCSampleList.py: Znunu truth systematics samples
+
 03-Nov-2015 Laurent Duflot
 	* FilterUpdateMerge.py: add merging of the debugrec_hlt stream
 	* data15_13TeV_p2425_debug.ds, data15_13TeV_p2425.ds: update datasets
